# compact_str-etna

./: .gitignore  BUGS.md  Cargo.toml  TASKS.md  etna.toml  steps.json
.github/workflows/: benchmarks.yml  ci.yml  clippy.yml  cross_platform.yml  fuzz.yml  msrv.yml  nostd.yml  release.yml
compact_str/: Cargo.toml
compact_str/src/: etna.rs  lib.rs
compact_str/src/features/: mod.rs
compact_str/src/repr/: mod.rs
compact_str/tests/: etna_witnesses.rs
examples/bevy-reflect/: Cargo.toml
fuzz/: Cargo.toml
patches/: retain_leaves_stale_len_on_panic_042b64a_1.patch  try_reserve_overflow_silent_ae5f2bc_1.patch
