[package]
name = "compact_str"
description = "A memory efficient string type that transparently stores strings on the stack, when possible"
version = "0.9.0"
authors = ["Parker Timmerman <parker@parkertimmerman.com>"]
edition = "2021"
license = "MIT"
rust-version = "1.81"                                                                                        # For core::error::Error
homepage = "https://github.com/ParkMyCar/compact_str"
repository = "https://github.com/ParkMyCar/compact_str"
readme = "../README.md"
keywords = ["string", "compact", "small", "memory", "mutable"]
categories = ["encoding", "parsing", "memory-management", "text-processing"]

[features]
# ETNA workload: default set pulls in the `etna` feature so that
# `cargo build --bin etna` at the workload root just works. To consume
# compact_str without ETNA framework deps, use `default-features = false`.
default = ["std", "etna"]
std = []

arbitrary = ["dep:arbitrary"]
bevy-reflect = ["dep:bevy_reflect", "serde"]
borsh = ["dep:borsh"]
bytes = ["dep:bytes"]
defmt = ["dep:defmt"]
diesel = ["dep:diesel"]
markup = ["dep:markup"]
proptest = ["dep:proptest"]
quickcheck = ["dep:quickcheck"]
rkyv = ["dep:rkyv"]
serde = ["dep:serde"]
smallvec = ["dep:smallvec"]
sqlx = ["dep:sqlx", "std"]
sqlx-mysql = ["sqlx", "sqlx/mysql"]
sqlx-postgres = ["sqlx", "sqlx/postgres"]
sqlx-sqlite = ["sqlx", "sqlx/sqlite"]
utoipa = ["dep:utoipa", "std"]
zeroize = ["dep:zeroize"]

# ETNA integration: pulls in proptest/quickcheck plus the framework crates
# so the src/bin/etna.rs runner can exercise all four PBT frameworks.
etna = [
    "std",
    "proptest",
    "quickcheck",
    "dep:crabcheck",
    "dep:hegeltest",
    "dep:rand_etna",
]

[[bin]]
name = "etna"
path = "src/bin/etna.rs"
required-features = ["etna"]

[[test]]
name = "etna_witnesses"
path = "tests/etna_witnesses.rs"
required-features = ["etna"]

[dependencies]
arbitrary = { version = "1", optional = true, default-features = false }
bevy_reflect = { version = "0.17.1", optional = true }
borsh = { version = "1", optional = true }
bytes = { version = "1", optional = true }
defmt = { version = "1", optional = true }
diesel = { version = "2", optional = true, default-features = false }
markup = { version = "0.15", optional = true, default-features = false }
proptest = { version = "1", optional = true, default-features = false, features = [
    "std",
] }
quickcheck = { git = "https://github.com/alpaylan/quickcheck.git", branch = "master", optional = true, default-features = false, features = ["etna"] }
rkyv = { version = "0.8", optional = true, default-features = false }
serde = { version = "1", optional = true, default-features = false, features = [
    "derive",
    "alloc",
] }
smallvec = { version = "1", optional = true, features = ["union"] }
sqlx = { version = "0.8", optional = true, default-features = false }
utoipa = { version = "5", optional = true }
zeroize = { version = "1", optional = true, default-features = false }

# ETNA framework deps — activated by the `etna` feature, linked by
# src/bin/etna.rs. The quickcheck dep is intentionally the etna-fork at the
# local path and supplies the `quickcheck` optional dep above.
crabcheck = { git = "https://github.com/alpaylan/crabcheck.git", branch = "main", optional = true }
hegeltest = { version = "0.3.7", optional = true }
rand_etna = { package = "rand", version = "0.9", optional = true }

castaway = { version = "0.2.3", default-features = false, features = ["alloc"] }
cfg-if = "1"
itoa = "1"
rustversion = "1"
ryu = "1"
static_assertions = "1"

[dev-dependencies]
cfg-if = "1"
proptest = { version = "1", default-features = false, features = ["std"] }
quickcheck = { git = "https://github.com/alpaylan/quickcheck.git", branch = "master", default-features = false, features = ["etna"] }
quickcheck_macros = "1"
rayon = "1"
rkyv = { version = "0.8.8" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
test-case = "3"
test-strategy = "0.3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
